--- a/latex/report.tex
+++ b/latex/report.tex
@@ -7,7 +7,7 @@
 \usepackage[shortlabels]{enumitem}
 \usepackage{graphicx}
 \usepackage{xfrac}
-\usepackage[disable]{todonotes}
+\usepackage{todonotes}
 \usepackage{afterpage}
 \usepackage{amsmath}
 \usepackage[titletoc,title]{appendix}
@@ -70,10 +70,6 @@
 \newcommand{\newpagefill}{
 	\vfill
 	\clearpage
-}
-
-\newcommand{\explanation}{
-	\todo[inline,color=green!40]
 }
 
 \DeclareCiteCommand{\secondaryciteauthor}{}{\printtext[bibhyperref]{\printnames{labelname}}}{}{}
