--- a/latex/ch3.tex
+++ b/latex/ch3.tex
@@ -2,7 +2,7 @@
 \begin{document}
 
 \section{Methodology}
-\label{sec:methodology}
+\label{ch:methodology}
 
 The proposed adaptation of CrossNet-Open-Unmix (X-UMX) to use the sliced Constant-Q Transform (sliCQ Transform or sliCQT) is named xumx-sliCQ,\footnote{\url{https://github.com/sevagh/xumx-sliCQ/tree/main}}\textsuperscript{,}\footnote{xumx-sliCQ is pronounced like ``X-U-M-X-slice-Q''} and is the subject and main result of this thesis.
 
