--- a/latex/ch4.tex
+++ b/latex/ch4.tex
@@ -2,7 +2,7 @@
 \begin{document}
 
 \section{Experiment and discussion}
-\label{sec:experiment}
+\label{ch:experiment}
 
 This section contains the results of the experiments described in Section \ref{sec:methodology}, and a discussion of the results. Refer to Appendix \ref{appendix:computerspec} for the hardware and software specifications of the computer which produced the results in this section.
 
