--- a/latex/ch5.tex
+++ b/latex/ch5.tex
@@ -2,7 +2,7 @@
 \begin{document}
 
 \section{Conclusion}
-\label{sec:conclusion}
+\label{ch:conclusion}
 
 In the task of music demixing, a mixed song is separated into estimates of its isolated constituent sources or instruments that can be summed back to the original mixture. A common approach to music demixing is to apply a mask to the spectrogram of the mix to extract the desired source. Two models for music demixing are Open-Unmix (UMX) and its closely-related variant CrossNet-Open-Unmix (X-UMX), both of which use spectrogram masking with the Short-Time Fourier Transform (STFT). The STFT has known limitations that arise from its fixed time-frequency resolution, and different sources or instruments may have conflicting needs for the time-frequency resolution of their STFT for better separation results.
 
